{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 18,
  "lineage": "cd42421a-6ea5-ab55-ced5-8a5f349eaaa8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a709081449d2204",
            "arn": "arn:aws:ec2:eu-central-1:236553837569:elastic-ip/eipalloc-05a709081449d2204",
            "domain": "vpc",
            "id": "eipalloc-05a709081449d2204",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-184-46-137.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.46.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-vpc-demo-nat-eip"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e272f41db78d79b",
            "arn": "arn:aws:ec2:eu-central-1:236553837569:instance/i-06e622f6359fe59a3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e622f6359fe59a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-vpc-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070ba3147f9887e47",
            "private_dns": "ip-10-0-2-246.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e2bff8ddf229fbc1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9fae1cdab40cdf9",
            "tags": {
              "Name": "tf-vpc-demo-private-ec2"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052f8f57ec60c60bd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "aws_security_group.private",
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e272f41db78d79b",
            "arn": "arn:aws:ec2:eu-central-1:236553837569:instance/i-0c22cd51bc234ddfc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c22cd51bc234ddfc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-vpc-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03680d14686b25dc8",
            "private_dns": "ip-10-0-1-226.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-63-178-247-255.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.178.247.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-045b166a88f84e5db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043465cf4f7d5948c",
            "tags": {
              "Name": "tf-vpc-demo-public-ec2"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bdd2518a70d9db5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssh",
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:236553837569:internet-gateway/igw-0937c7fcbf67ec57d",
            "id": "igw-0937c7fcbf67ec57d",
            "owner_id": "236553837569",
            "tags": {
              "Name": "tf-vpc-demo-igw"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-igw"
            },
            "vpc_id": "vpc-0bf7dd32cbc7d089b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a709081449d2204",
            "association_id": "eipassoc-0afae970f05435c49",
            "connectivity_type": "public",
            "id": "nat-092179593c7cfd800",
            "network_interface_id": "eni-00913a0f781a4f9d5",
            "private_ip": "10.0.1.141",
            "public_ip": "18.184.46.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-043465cf4f7d5948c",
            "tags": {
              "Name": "tf-vpc-demo-nat"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:236553837569:route-table/rtb-0cce34f70c52ae4f5",
            "id": "rtb-0cce34f70c52ae4f5",
            "owner_id": "236553837569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-092179593c7cfd800",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-demo-private-rt"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf7dd32cbc7d089b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:236553837569:route-table/rtb-09f285add646e641f",
            "id": "rtb-09f285add646e641f",
            "owner_id": "236553837569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0937c7fcbf67ec57d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-demo-public-rt"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf7dd32cbc7d089b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05389abfc56951ece",
            "route_table_id": "rtb-0cce34f70c52ae4f5",
            "subnet_id": "subnet-0a9fae1cdab40cdf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082adfa8623855327",
            "route_table_id": "rtb-09f285add646e641f",
            "subnet_id": "subnet-043465cf4f7d5948c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:236553837569:security-group/sg-052f8f57ec60c60bd",
            "description": "All outbound (for ping via NAT)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound (for ping via NAT)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052f8f57ec60c60bd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ICMP (ping) from the bastion",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-07bdd2518a70d9db5"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "SSH only from the bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07bdd2518a70d9db5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-vpc-demo-private-sg",
            "name_prefix": "",
            "owner_id": "236553837569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-vpc-demo-private-sg"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf7dd32cbc7d089b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:236553837569:security-group/sg-07bdd2518a70d9db5",
            "description": "SSH from my IP, all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bdd2518a70d9db5",
            "ingress": [
              {
                "cidr_blocks": [
                  "81.210.67.229/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-vpc-demo-public-sg",
            "name_prefix": "",
            "owner_id": "236553837569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-vpc-demo-public-sg"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf7dd32cbc7d089b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:236553837569:subnet/subnet-0a9fae1cdab40cdf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9fae1cdab40cdf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236553837569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-demo-private-subnet"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-private-subnet"
            },
            "vpc_id": "vpc-0bf7dd32cbc7d089b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:236553837569:subnet/subnet-043465cf4f7d5948c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043465cf4f7d5948c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236553837569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-vpc-demo-public-subnet"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-public-subnet"
            },
            "vpc_id": "vpc-0bf7dd32cbc7d089b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:236553837569:vpc/vpc-0bf7dd32cbc7d089b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021128ea1687c522c",
            "default_route_table_id": "rtb-01292128defc4c0e4",
            "default_security_group_id": "sg-0914490aa09742bb0",
            "dhcp_options_id": "dopt-0701df63f64c29dd3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf7dd32cbc7d089b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01292128defc4c0e4",
            "owner_id": "236553837569",
            "tags": {
              "Name": "tf-vpc-demo-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}